Fix for overlaping shadow on the back-to-top button

--- a/plugins/rocks.xml.webhelp/resources/css/topic.css
+++ b/plugins/rocks.xml.webhelp/resources/css/topic.css
@@ -1232,7 +1232,7 @@ li.linklist {
     border-radius: 50%;
     margin-bottom: 1.2rem;
     pointer-events: auto;
-    box-shadow: 0 0 40px 40px #ffffff;
+    box-shadow: 0 0 19px 19px #ffffff;
 }
 /*--- Back to top button END ---*/
 
